# mini-gpt-text-generator

./: .gitignore  README.md  baseline.py  bigram_model.json  data.txt  gpt.py  pyproject.toml  run_train_once.py  train_gpt.py
minigpt/: __init__.py  cli.py
minigpt/data/: dataset.py
minigpt/models/: gpt.py
minigpt/utils/: trainer.py
