[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minigpt"
version = "0.1.0"
description = "A minimal GPT implementation for educational purposes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.scripts]
minigpt = "minigpt.cli:main"